--- a/index.html
+++ b/index.html
@@ -49,12 +49,29 @@
         <h1 id="titulo">Mi tienda naturista</h1>
         <section>
             <article>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti distinctio quasi et repellendus dolor. Officiis amet possimus deserunt quisquam expedita iure sint hic, saepe delectus ipsum fugit unde. Provident, quis.
-                Obcaecati amet exercitationem quidem, alias necessitatibus mollitia fugit placeat officiis ipsam sapiente nam id ipsum aliquam repellendus eos. Eius non architecto earum ullam ipsum quos vel officiis dolorem ad dicta.
-                Rerum corporis blanditiis quia at ullam labore quisquam perspiciatis nam! Eligendi error ipsa incidunt non harum ut beatae laboriosam, laudantium doloremque, ducimus assumenda optio quod velit provident quaerat voluptatem dolore.
-                Vero facere natus eius, eum molestiae blanditiis quibusdam. Aliquam delectus neque qui? Quo aspernatur, fugiat saepe obcaecati numquam veritatis nihil suscipit minima laboriosam nulla deserunt placeat animi dicta illo illum!
-                Delectus, esse accusantium, iusto dignissimos earum nobis quo est, perspiciatis nisi voluptatum facere. Vitae, omnis nesciunt dolorem neque incidunt atque dolores explicabo fugit molestiae, magni, nostrum nam praesentium fugiat possimus.
-                Adipisci consequatur laboriosam inventore fuga totam dolorem architecto veritatis hic sed aliquid delectus placeat in sit facere, error, expedita itaque consequuntur vitae? Voluptas, incidunt tenetur facilis alias totam illo asperiores.</p>
+                <p> Productos, suplementos naturales y nutricionales a base de frutas, plantas y verduras 100% naturales con el fin de prevenir y tratar enfermedades, 
+                  esta serie de tratamientos de bajo costo y facil acceso los podras consultar en la tienda oficial de omnilife, este tipo de producto no producen efectos secundarios y pueden mezclarse entre
+                  si, sin ningun problema alguno, a continuacion vera algunas de las muchas enfermedades que se pueden tratar con los productos de omnilife, algunas de estas enfermedades son:</p>
+            <div>
+              <ul>
+                <li>Diabetes</li>
+                <li>Cancer</li>
+                <li>Tratamiento para la fibromalgia</li>
+                <li>Tratamientos para problemas gastrointestinales</li>
+                <li>Trartamiento problemas hormonales en el hombre y la mujer</li>
+                <li>Tratamiento para la obesidad</li>
+                <li>Problemas circulatorios </li>
+                <li>Problemas de prostata</li>
+                <li>Osteoporosis</li>
+                <li>Problams renales y epaticos</li>
+              </ul>
+                <p>
+                  entre muchos otros, gracias a los avances de la medicina alternativa, se pueden tratar estos problemas de salud sin la necesidad de medicamentos quimicos que podrian volver dependiente a ellos o tener otros efectos secundarios
+                  sin mencionar los otros tratamiento quimicos sumamanete costos que no le garantisan una estabilidad en su salud y bienestar 
+
+                </p>
+
+            </div>
             </article>
         </section>
      
@@ -91,12 +108,10 @@
 
           <section>
             <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ducimus nostrum obcaecati aliquid corrupti nam minus vero magnam est ad, eum esse dolore quasi ex accusantium recusandae quo, sapiente quibusdam.
-                Quas culpa nesciunt exercitationem deleniti aliquam sint numquam. Aperiam at facere similique, dolorem rerum nihil! Necessitatibus, eaque autem! Voluptates, consectetur iure? Laboriosam ut quae beatae quibusdam praesentium. Atque, nesciunt voluptatum.
-                Molestiae consequuntur quos nostrum alias sed? Repellat necessitatibus ipsa non eligendi minus tempora a recusandae, nisi ipsam natus asperiores sunt voluptate atque sed quisquam accusamus harum doloribus nulla sequi tempore.
-                Qui necessitatibus deserunt unde minima earum fugiat nobis numquam in eaque! Quo animi molestiae, cum laudantium maxime officia eos, nihil perferendis error, ut corporis quis illum temporibus explicabo necessitatibus est?
-                Omnis, quis quam optio perferendis ipsa, ducimus ex eaque expedita officiis fuga tempore nostrum a explicabo nam voluptas veritatis? Aliquid quia veritatis molestias architecto. Ipsum maxime placeat voluptatum maiores necessitatibus?
-                Enim iusto ipsum similique eligendi iure saepe, sunt recusandae debitis laudantium! Iusto tenetur assumenda, laborum quibusdam maxime accusamus quod animi repellat cupiditate repudiandae numquam, sint voluptatum perferendis, facilis harum. Architecto.</p>
+                <p>Grupo Omnilife es una compañía de marketing multinivel radicada en Guadalajara, México que distribuye suplementos alimenticios.​​ La corporación es propiedad de los herederos de Jorge Vergara, ​ quien también fue dueño del Club Deportivo Guadalajara.
+                  ¿Qué hacen los productos de OMNILIFE?
+                   Omnilife es una multinacional mexicana de productos nutricionales y suplementos alimenticios pionera en la suplementación líquida. Tiene una línea de bebidas de varios tipos: refrescantes, hidratantes, de control de peso, etc y otra línea de belleza (Angelíssima).
+                </p>
             </article>
         </section>
         <section>
