--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -50,8 +50,8 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Power Maker</h5>
+                    <p class="card-text">Eleva considerablemente las defensas (Sistema Inmunológico). Tonifica, reafirma y da volumen a la masa muscular. Disminuye la grasa corporal (combate la celulitis). Evita la agrupación de plaquetas y con ello la formación de coágulos de sangre, responsables de la mayoría de los ataques cardiacos</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div>
                 </div>
