--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,24 +47,29 @@
     </section>
     <div>
         <article>
-            <h2>titulo del articulo</h2>
+            <h2>¿Quienes somos?</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius, velit quos voluptatem nesciunt praesentium placeat! Iusto unde fugit commodi, cupiditate quo et molestiae earum, nobis delectus veniam eveniet facere!
-                Qui, dolores? Amet repellendus quam odit quis, obcaecati ipsum, ab facere repudiandae dolores nostrum repellat ut laudantium fuga quo numquam similique velit voluptate. Eum, dignissimos! Voluptatibus corrupti aut doloribus sunt.
-                Non nam unde vitae fugit sequi, nulla optio excepturi sint amet deserunt doloremque consequuntur provident dolore reprehenderit nemo obcaecati tempora hic repellendus. Tempore obcaecati aliquid maxime similique accusantium iste autem!
-                Laborum non sit accusantium eum iste distinctio repellat quasi nostrum quaerat ab, provident nulla accusamus illum vel architecto unde tempora excepturi nobis sequi! Pariatur earum iure tempora temporibus animi vero!
-                Quod, corrupti quisquam. Repellendus nesciunt ad, ipsam necessitatibus veritatis adipisci! Non consectetur nihil soluta excepturi sint provident at officiis, earum praesentium. Reiciendis soluta modi, expedita quam ipsum voluptates molestias dignissimos!
+                Somos pequeñños emprendedores capacitados por la empresa omnilife para vender y promosionar sus productos, ademas de que contamos con el conocimiento para tratar esta serie de enfermadades y aplicar los tratamientos que estas requieren 
+                tambien contamos con el certificado para capacitar a las personas de que se afilien a omnilife como compradores o distribuidores, si quiere saber como inscribirse y hacerse miembro del Grupo omnilife puede consultar en la pagina oficial de https://portal.omnilife.com/
             </p>
         </article>
         <hr>
         <article>
-            <h2>titul del articulo</h2>
+            <h2>¿Donde donde son los productos de omnilife y donde estan sus sucursales?</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est exercitationem rerum, fuga maxime magnam, veritatis aut voluptatibus velit ducimus excepturi quibusdam enim. Fugit velit odio labore obcaecati? Incidunt, eveniet veritatis.
-                Dolor quia dolorem dicta itaque illo deserunt. Ad, autem ipsa porro nihil facere possimus dicta in aliquid blanditiis laboriosam? Ab laudantium excepturi fuga quibusdam, esse pariatur aspernatur dignissimos unde perferendis.
-                Rerum earum tempore quisquam voluptas. Modi ipsam, itaque in a ex magnam? Incidunt assumenda optio quos veniam autem debitis quidem reprehenderit. Animi ullam recusandae accusamus tenetur, porro debitis possimus delectus.
-                Assumenda omnis, quidem perspiciatis ducimus consequuntur error ex consectetur, quod, autem id asperiores! Vitae, aspernatur pariatur tenetur deserunt incidunt temporibus esse reprehenderit, commodi quis velit enim magnam accusantium? Aut, similique!
-                Consequuntur laboriosam sequi soluta distinctio necessitatibus suscipit eos molestiae commodi assumenda nihil sunt dolorum, ipsum architecto accusamus possimus molestias tempora perferendis. Commodi, beatae! Quidem, voluptates? Provident dolore nulla esse laborum?
+              Grupo Omnilife es una compañía de marketing multinivel radicada en Guadalajara, México que distribuye suplementos alimenticios.1​2​ La corporación es propiedad de los herederos de Jorge Vergara,3​ quien también fue dueño del Club Deportivo Guadalajara.
+              <h2>¿Donde se crean?</h2>
+              <p>
+                Omnilife cuenta con dos plantas de manufactura, una en México con una superficie de 50,000 m² la cual se posiciona como la más grande del mundo en su ramo y en donde se fabrican cerca de 17 millones de productos mensualmente.[cita requerida] La otra planta está ubicada en Colombia, con una extensión de 5000 m² con una capacidad de producción de 650 000 productos mensuales aproximadamente.
+
+                Planta de manufactura en México
+
+                En la Planta de Manufactura Omnilife de México se producen mercancías que se distribuyen a México, Brasil, España, Costa Rica, Estados Unidos, Guatemala, Italia, Nicaragua, Panamá, Paraguay, República Dominicana, El Salvador y Uruguay.
+
+                Planta de manufactura en Colombia
+
+                La segunda y única planta de manufactura de Omnilife fuera de México se ubica en Caloto, Cauca (Colombia), y manufactura productos en polvo para Sudamérica.
+              </p>
             </p>
         </article>
         <hr>
