--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,27 +45,16 @@
       </nav>
     
     <main class="contenido2">
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam facilis reprehenderit iusto labore possimus doloremque hic expedita cumque delectus! Distinctio, blanditiis tempore voluptatum dignissimos reiciendis eaque commodi numquam dolor vel.</p>
-    </div>
-
-    <aside>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi non quas quis, voluptatum id, mollitia provident ad cumque eos voluptatibus exercitationem enim fugit assumenda nulla repellendus animi ut quidem.
-        Iusto odit velit officiis error nulla dolore, quod consequatur ratione sapiente beatae quasi nemo quaerat laborum quidem, quam dicta! Nulla totam, ipsa ipsum quae reiciendis molestiae asperiores cumque tenetur distinctio.
-        Cupiditate est nemo inventore voluptatum? Unde veritatis quis, atque maiores voluptas illum quas obcaecati ipsa officia, delectus tempora assumenda ab explicabo provident suscipit tenetur deleniti inventore accusamus officiis, consequatur modi!
-        Ad, quae dolor adipisci perferendis fugit obcaecati molestias officiis voluptatum eum mollitia voluptates minus magnam harum cupiditate blanditiis provident. Rerum, sit perspiciatis deserunt minus voluptatibus architecto molestias corrupti eligendi ab!</p>
-    </aside>
-
-    <div>
-      <div class="card-ubicacion">
-        <div class="container-fluid">
-        <div class="row">
+      <div>
+        <div class="card-ubicacion">
+          <div class="container-fluid">
+            <div class="row">
             <div class="col-sm-12 col-md-6 col-xl-4">
             <div class="card" style="width: 18rem;">
             <img src="../img/1429653.png" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Fem plus</h5>
+              <p class="card-text">Omnilife Oml Fem Plus Suplemento dietético – Ayuda a apoyar el equilibrio hormonal saludable, alivia los sofocos, suplemento antioxidante en polvo, endulzado con estevia – 9.49 onzas – (30 bolsitas)</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
           </div>
@@ -74,8 +63,8 @@
           <div class="card" style="width: 18rem;">
             <img src="../img/descarga.jpg" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Power Maker</h5>
+              <p class="card-text"> Este Producto de Omnilife beneficia en gran manera el Sistema Muscular, el Sistema Óseo y el Sistema endocrino. Regula las funciones de las diferentes hormonas del cuerpo tanto en hombres como mujeres.</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
           </div>
@@ -84,8 +73,8 @@
           <div class="card" style="width: 18rem;">
             <img src="../img/2313801-1.png" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Omniplus</h5>
+              <p class="card-text">El OMNIPLUS actúa FORTALECIENDO y CORRIGIENDO el Sistema Inmunológico, que es la defensa natural del cuerpo. Actúa contra las infecciones provocadas por bacterias, virus y también combate células corporales anormales como las CANCEROSAS y las TUMORALES.</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
           </div>
@@ -94,8 +83,8 @@
           <div class="card" style="width: 18rem;">
             <img src="../img/4475910.webp" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Dolce vita</h5>
+              <p class="card-text">El Dolce Vita Supreme es un suplemento alimenticio bajo en calorías con sabor a toronja que ayuda a controlar el peso quemando las grasas almacenadas, controlando el azúcar en la sangre, y previene el estreñimiento al acelerar el paso de los alimentos en el sistema digestivo, agregándole volumen a las heces.14 abr 2021</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
           </div>
@@ -104,18 +93,18 @@
           <div class="card" style="width: 18rem;">
             <img src="../img/Aloe-Beta-Omnilife-200ml.jpg" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Aloe Beta</h5>
+              <p class="card-text">Aparte de utilizarse como un producto dermatológico y como un agente beneficioso para la piel, también se utiliza en varias bebidas como suplemento alimenticio debido a que favorece la cicatrización de las heridas, la humectación de la piel, y el fortalecimiento del sistema inmunológico.</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
           </div>
           </div>
           <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card" style="width: 18rem;">
-            <img src="../img/descarga.jpg" class="card-img-top" width="50px" alt="...">
+            <img src="../img/ego-frutas.jpg" class="card-img-top" width="50px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Ego Fruta</h5>
+              <p class="card-text">Ego Frutas del Bosque es una bebida gasificada con delicioso sabor a frutas, preparada por la empresa OMNILIFE. Promueve el buen funcionamiento de la vejiga y el hígado. Ambos órganos son de vital importancia para la digestión y absorción adecuadas de nutrientes.</p>
               <a href="./comprar.html" class="btn btn-primary">comprar</a>
             </div>
             </div>
