--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -96,6 +96,17 @@
               </div>
             </div>
           </div>
+
+          <footer>
+            <section>
+              <ul>
+                  <li><a href="">facebook</a></li>
+                  <li><a href="">instagram</a></li>
+                  <li><a href="">twiitter</a></li>
+                  <li><a href="">pinteres</a></li>
+              </ul>
+          </section>
+          </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     </body>
